# zumosaurus

./: README.md
zumosaurus_bringup/: CMakeLists.txt  package.xml
zumosaurus_bringup/config/: teleop_twist_joy_MOCUTE.config.yaml  zumosaurus_controllers.yaml
zumosaurus_bringup/launch/: teleop_node.launch.py  zumosaurus.launch.py  zumosaurus_gcs.launch.py
zumosaurus_controllers/: CMakeLists.txt  package.xml  zumosaurus_controllers.xml
zumosaurus_controllers/include/zumosaurus_controllers/: skel_custom_controller.hpp  visibility_control.h
zumosaurus_controllers/src/: skel_custom_controller.cpp
zumosaurus_controllers/test/: test_load_skel_custom_controller.cpp  test_skel_custom_controller.cpp  test_skel_custom_controller.hpp
zumosaurus_description/: CMakeLists.txt  package.xml
zumosaurus_description/launch/: view_zumosaurus.launch.py
zumosaurus_description/ros2_control/: zumosaurus.ros2_control.xacro
zumosaurus_description/urdf/: zumosaurus.urdf.xacro  zumosaurus_description.urdf.xacro
zumosaurus_description/urdf/zumosaurus/: zumosaurus_macro.ros2_control.xacro  zumosaurus_macro.xacro
zumosaurus_hardware_interface/: CMakeLists.txt  package.xml  zumosaurus_hardware_interface.xml
zumosaurus_hardware_interface/include/zumosaurus_hardware_interface/: visibility_control.h  zumosaurus_robot_hardware.hpp
zumosaurus_hardware_interface/src/: zumosaurus_robot_hardware.cpp
zumosaurus_hardware_interface/test/: test_zumosaurus_robot_hardware.cpp
