<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zumosaurus_bringup</name>
  <version>0.0.0</version>
  <description>zumosaurus_bringup</description>
  <maintainer email="poinix@gmail.com">poine</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>xacro</buildtool_depend>
  <buildtool_depend>rviz2</buildtool_depend>
  <buildtool_depend>robot_state_publisher</buildtool_depend>
  <buildtool_depend>joint_trajectory_controller</buildtool_depend>
  <buildtool_depend>joint_state_controller</buildtool_depend>
  <buildtool_depend>forward_command_controller</buildtool_depend>
  <buildtool_depend>controller_manager</buildtool_depend>
  <buildtool_depend>zumosaurus_description</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
