<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zumosaurus_hardware_interface</name>
  <version>0.0.0</version>
  <description>Hardware interface for Zumosaurus</description>
  <maintainer email="poinix@gmail.com">poine</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime-tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
